# handler/v1/role/req_res_model.go
@@ -3,20 +3,16 @@ package role
 import "ant-forum/model"
 
 type CreateRequest struct {
-	Name   string `json:"name"`
-	Path   string `json:"path"`
-	Method string `json:"method"`
+	Name string `form:"name" json:"name" xml:"name" binding:"required"`
 }
 
 type CreateResponse struct {
-	Name   string `json:"name"`
-	Path   string `json:"path"`
-	Method string `json:"method"`
+	Name string `json:"name"`
 }
 
 type ListRequest struct {
-	Offset int `json:"offset"`
-	Limit  int `json:"limit"`
+	Offset int `form:"offset" json:"offset" xml:"offset"`
+	Limit  int `form:"limit" json:"limit" xml:"limit"`
 }
 
 type ListResponse struct {
